maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:4: error: not found: value random2
  var t = random2()
          ^RandomMouseMaze:10: error: not found: value random2
    r=random3();t=random2()
                  ^